# spyderGPT

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/spydergpt/: __main__.py  config.py  ingestor.py  loader.py  operator.py  processor.py  utils.py  wrapper.py
src/spydergpt/data/: spydergpt.yml.sample
src/spydergpt/enum/: __init__.py  metaEnum.py  operationsenum.py
src/spydergpt/exception/: InvalidOperationKeyError.py  NoNewDocumentsLoadedError.py  __init__.py  exceptions.py
src/spydergpt/worker/: __init__.py  localworker.py  urlworker.py  webworker.py  workerbase.py
