[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spydergpt"
version = "0.2.0"
description = "use GPT4All to query documents retrieved from website and local repositories"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
keywords = ["gpt", "crawler", "vectorstore", "chromadb", "huggingface"]
authors = [
  {name = "Ian Meinert", email = "ian.meinert@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10"
]

dependencies = [
  "pandas >=2.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spydergpt.data" = ["spydergpt.yml"]

[project.urls]
Repository = "https://github.com/ianmeinert"